test/ClangImporter/objc_protocol_renaming.code
// RUN: %empty-directory(%t)

// FIXME: BEGIN -enable-source-import hackaround
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk-nosource) -emit-module -o %t %clang-importer-sdk-path/language-modules/CoreGraphics.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk-nosource -I %t) -emit-module -o %t %clang-importer-sdk-path/language-modules/Foundation.code
// FIXME: END -enable-source-import hackaround

// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk-nosource -I %S/Inputs/custom-modules -I %t) -emit-module -o %t %S/Inputs/ImplementProtoRenaming.code

// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk-nosource -I %S/Inputs/custom-modules -I %t) -typecheck %s -verify

// REQUIRES: objc_interop

import Foundation
import ProtoRenaming
import ImplementProtoRenaming

// https://github.com/apple/language/issues/46502
// Compiler crash when using an "old" name for an imported requirement
class MyGraphViewSubclass : MyGraphView {
	@objc fn doSomethingToGraphView(_ view: GraphView) { } // expected-error{{method 'doSomethingToGraphView' with Objective-C selector 'doSomethingToGraphView:' conflicts with method 'doSomething(to:)' from superclass 'MyGraphView' with the same Objective-C selector}}
}
